# pai

./: .gitignore  Cargo.toml  README.md  build.bat
config/prompts/: assistant.txt  commands.txt  suggestions.txt
src/: main.rs  variables.rs
src/chatgpt/: chatgpt.rs  config.rs  mod.rs  models.rs  prompts.rs  result.rs
src/chatgpt/commands/: assistant.rs  mod.rs  suggestions.rs
src/chatgpt/functions/: exec.rs  get_dir_list.rs  get_dir_tree.rs  mod.rs  print.rs  println.rs  read_file.rs  write_file.rs
src/pai/: config.rs  database.rs  functions.rs  mod.rs  pai.rs
src/terminal/: command_buffer.rs  mod.rs  suggestions.rs  terminal.rs
src/utils/: chatgpt.rs  colorize.rs  console.rs  file_path.rs  fs.rs  mod.rs  project_dir.rs  tree.rs  variables.rs
