[package]
name = "pai"
version = "1.0.2"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
regex = "1.9.5"
crossterm = "0.27.0"
chrono = "0.4.35"
once_cell = "1.19.0"
tiktoken = "1.0.1"